# permguard-trustplane

./: Cargo.toml  README.md  build.rs
crates/permguard-pic/: Cargo.toml  README.md
proto/: bridge.proto  bridge_admin.proto  cat.proto
src/: bridge.rs  bridge_admin.rs  cat.rs  cli.rs  config.rs  credentials.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs
src/credentials/: bridge.rs  did.rs  keys.rs  provider.rs
src/proto/: mod.rs  permguard.trustplane.bridge.v1.rs  permguard.trustplane.bridge_admin.v1.rs  permguard.trustplane.cat.v1.rs
