[package]
name = "permguard-pic"
version.workspace = true
edition.workspace = true
description = "Permguard CAT (Causal Authority Transition) for PIC Protocol"
license.workspace = true
repository.workspace = true

[lib]
name = "permguard_pic"

[features]
default = []
ssi = ["dep:ssi"]
oauth = ["dep:oauth2"]
full = ["ssi", "oauth"]

[dependencies]
# Core
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Crypto
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

# Optional dependencies
ssi = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }

# PIC Protocol
pic-protocol.workspace = true
